fixed: profile text-overflow

--- a/blocks/profile/__header/profile__header.css
+++ b/blocks/profile/__header/profile__header.css
@@ -8,11 +8,13 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  width: 100%;
 }
 
 @media (max-width: 730px) {
   .profile__header {
     font-size: 27px;
     margin-top: 10px;
+    max-width: 100%;
   }
 }
