--- a/blocks/profile/__heading-line/profile__heading-line.css
+++ b/blocks/profile/__heading-line/profile__heading-line.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: baseline;
   justify-content: flex-start;
+  width: 100%;
 }
 
 @media (max-width: 730px) {
