--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,4 +4,6 @@
   flex-direction: column;
   justify-content: center;
   margin: 0;
+  max-width: 100%;
+  overflow: hidden;
 }
